--- a/Large Language Model Colab.ipynb
+++ b/Large Language Model Colab.ipynb
@@ -103,57 +103,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "4053585f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import torch.nn as nn\n",
-    "import torch.nn.functional as F\n",
-    "from transformers.modeling_outputs import SequenceClassifierOutput\n",
-    "from Transformer_Models import ContextDistilBert, ContextDistilBertwithData\n",
-    "import torch\n",
-    "import os\n",
-    "\n",
-    "\n",
-    "model_ckpt = 'domain_adaptation_final_body'\n",
-    "\n",
-    "encoder = ContextDistilBertwithData(model_ckpt)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "0162eced",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data_dict = articles_encoded['train'].with_format('pt')[:5]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "id": "b4a84ba8",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "torch.Size([5, 4398])"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "encoder(**data_dict).size()"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 13,
    "id": "492fb3d2",
    "metadata": {},
@@ -163,6 +112,7 @@
     "import torch.nn.functional as F\n",
     "import numpy as np\n",
     "import torch\n",
+    "import os\n",
     "from dataclasses import dataclass\n",
     "from Transformer_Models import ContextDistilBert, ContextDistilBertwithData\n",
     "\n",
@@ -220,9 +170,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model_ckpt = 'domain_adaptation_final_body_2'\n",
+    "device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')\n",
     "\n",
-    "model = ContextDistilBertwithDataforClassification(model_ckpt)"
+    "articles_encoded.set_format('pt')"
    ]
   },
   {
@@ -233,8 +183,8 @@
    "outputs": [],
    "source": [
     "from tqdm import tqdm\n",
-    "def train_loop(h_training_dataset, model, optimizer, batch_size, verbose = False):\n",
-    "    h_training_dataset = h_training_dataset.with_format('pt').shuffle()\n",
+    "def train_loop(h_training_dataset, model, optimizer, batch_size, device, verbose = False):\n",
+    "    h_training_dataset = h_training_dataset.shuffle()\n",
     "    total_rows = h_training_dataset.num_rows\n",
     "    steps = total_rows // batch_size\n",
     "    if total_rows % batch_size:\n",
@@ -244,9 +194,9 @@
     "        for batch_idx in pbar:\n",
     "            start = batch_idx*batch_size; end = batch_idx*batch_size + batch_size\n",
     "            if end > total_rows:\n",
-    "                result = model(**{k:v for k,v in h_training_dataset[start:].items()})\n",
+    "                result = model(**{k:v.to(device) for k,v in h_training_dataset[start:].items()})\n",
     "            else:\n",
-    "                result = model(**{k:v for k,v in h_training_dataset[start:end].items()})\n",
+    "                result = model(**{k:v.to(device) for k,v in h_training_dataset[start:end].items()})\n",
     "            optimizer.zero_grad()\n",
     "            result.loss.backward()\n",
     "            optimizer.step()\n",
@@ -257,9 +207,9 @@
     "        for batch_idx in range(steps):\n",
     "            start = batch_idx*batch_size; end = batch_idx*batch_size + batch_size\n",
     "            if end > total_rows:\n",
-    "                result = model(**{k:v for k,v in h_training_dataset[start:].items()})\n",
+    "                result = model(**{k:v.to(device) for k,v in h_training_dataset[start:].items()})\n",
     "            else:\n",
-    "                result = model(**{k:v for k,v in h_training_dataset[start:end].items()})\n",
+    "                result = model(**{k:v.to(device) for k,v in h_training_dataset[start:end].items()})\n",
     "            optimizer.zero_grad()\n",
     "            result.loss.backward()\n",
     "            optimizer.step()\n",
@@ -293,8 +243,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def test_loop(h_test_dataset, model, batch_size, verbose = False):\n",
-    "    h_test_dataset = h_test_dataset.with_format('pt').shuffle()\n",
+    "def test_loop(h_test_dataset, model, batch_size, device, verbose = False):\n",
+    "    h_test_dataset = h_test_dataset.shuffle()\n",
     "    total_rows = h_test_dataset.num_rows\n",
     "    steps = total_rows // batch_size\n",
     "    if total_rows % batch_size:\n",
@@ -309,9 +259,9 @@
     "            for batch_idx in pbar:\n",
     "                start = batch_idx*batch_size; end = batch_idx*batch_size + batch_size\n",
     "                if end > total_rows:\n",
-    "                    result = model(**{k:v for k,v in h_test_dataset[start:].items()})\n",
+    "                    result = model(**{k:v.to(device) for k,v in h_test_dataset[start:].items()})\n",
     "                else:\n",
-    "                    result = model(**{k:v for k,v in h_test_dataset[start:end].items()})\n",
+    "                    result = model(**{k:v.to(device) for k,v in h_test_dataset[start:end].items()})\n",
     "                loss += result.loss.item()\n",
     "                preds.append(np.argmax(result.preds, -1))\n",
     "            preds = np.concatenate(preds)\n",
@@ -324,9 +274,9 @@
     "            for batch_idx in range(steps):\n",
     "                start = batch_idx*batch_size; end = batch_idx*batch_size + batch_size\n",
     "                if end > total_rows:\n",
-    "                    result = model(**{k:v for k,v in h_test_dataset[start:].items()})\n",
+    "                    result = model(**{k:v.to(device) for k,v in h_test_dataset[start:].items()})\n",
     "                else:\n",
-    "                    result = model(**{k:v for k,v in h_test_dataset[start:end].items()})\n",
+    "                    result = model(**{k:v.to(device) for k,v in h_test_dataset[start:end].items()})\n",
     "                loss += result.loss.item()\n",
     "                preds.append(np.argmax(result.preds, -1))\n",
     "            preds = np.concatenate(preds)\n",
@@ -422,7 +372,9 @@
     }
    ],
    "source": [
+    "model_ckpt = 'domain_adaptation_final_body_2'\n",
     "\n",
+    "model = ContextDistilBertwithDataforClassification(model_ckpt).to(device)\n",
     "\n",
     "\n",
     "optimizer = torch.optim.AdamW(model.parameters(), lr = 3e-4)\n",
@@ -437,8 +389,8 @@
     "\n",
     "\n",
     "for i in range(4):\n",
-    "    train_loop(articles_original['train'], model, optimizer, 8)\n",
-    "    test_loop(articles_original['validation'], model, 8)\n",
+    "    train_loop(articles_original['train'], model, optimizer, 8, device)\n",
+    "    test_loop(articles_original['validation'], model, 8, device)\n",
     "    lr_scheduler.step()\n",
     "    dir_path = os.path.join(os.getcwd(), f'checkpoint_epoch_{i}')\n",
     "    os.mkdir(dir_path)\n",
