--- a/Large Language Model Colab.ipynb
+++ b/Large Language Model Colab.ipynb
@@ -3,6 +3,37 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "5ee01b9d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# from google.colab import drive\n",
+    "# drive.mount('/content/drive')\n",
+    "\n",
+    "# import os \n",
+    "\n",
+    "# dir_path = '/content/drive/MyDrive/checkpoints'\n",
+    "# if os.path.isdir(dir_path):\n",
+    "#     pass\n",
+    "# else:\n",
+    "#     os.mkdir(dir_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cc434e4a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# %cp /content/drive/MyDrive/pytorch_model.bin /content/UKYDataScienceComp2023/domain_adaptation_final_body_2/pytorch_model.bin\n",
+    "\n",
+    "# %cp /content/drive/MyDrive/online_news_popularity_data.csv /content/UKYDataScienceComp2023/online_news_popularity_data/online_news_popularity_data.csv\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "27d5411a",
    "metadata": {},
    "outputs": [],
@@ -11,7 +42,7 @@
     "\n",
     "\n",
     "\n",
-    "!pip install transformers datasets"
+    "# !pip install transformers datasets"
    ]
   },
   {
@@ -103,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "id": "492fb3d2",
    "metadata": {},
    "outputs": [],
@@ -139,7 +170,7 @@
     "        distilbert_output = self.body(**kwargs)\n",
     "        pooled_output = distilbert_output\n",
     "        pooled_output = self.pre_classifier(pooled_output)\n",
-    "        pooled_output = nn.ReLU()(pooled_output)\n",
+    "        pooled_output = nn.GELU()(pooled_output)\n",
     "        pooled_output = self.dropout(pooled_output)\n",
     "        logits = self.classifier(pooled_output)\n",
     "        softmax = logits.detach().cpu().numpy()\n",
@@ -147,7 +178,7 @@
     "        # calculate losses\n",
     "        loss = None\n",
     "        if labels is not None:\n",
-    "            loss_fct = nn.CrossEntropyLoss()\n",
+    "            loss_fct = nn.BCEWithLogitsLoss()\n",
     "            loss = loss_fct(logits.view(-1,2), labels.view(-1))\n",
     "            \n",
     "        result = SequenceClassifierOutput(\n",
@@ -165,10 +196,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 2,
    "id": "66d9251f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'articles_encoded' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Input \u001b[0;32mIn [2]\u001b[0m, in \u001b[0;36m<cell line: 3>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m device \u001b[38;5;241m=\u001b[39m torch\u001b[38;5;241m.\u001b[39mdevice(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mcuda\u001b[39m\u001b[38;5;124m'\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m torch\u001b[38;5;241m.\u001b[39mcuda\u001b[38;5;241m.\u001b[39mis_available() \u001b[38;5;28;01melse\u001b[39;00m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mcpu\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m----> 3\u001b[0m \u001b[43marticles_encoded\u001b[49m\u001b[38;5;241m.\u001b[39mset_format(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mpt\u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'articles_encoded' is not defined"
+     ]
+    }
+   ],
    "source": [
     "device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')\n",
     "\n",
@@ -288,6 +331,37 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "aa09f635",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import smtplib\n",
+    "from email.mime.text import MIMEText\n",
+    "\n",
+    "# Texting function\n",
+    "\n",
+    "def send_email(subject, body, sender, recipients, password):\n",
+    "    msg = MIMEText(body)\n",
+    "    msg['Subject'] = subject\n",
+    "    msg['From'] = sender\n",
+    "    msg['To'] = ', '.join(recipients)\n",
+    "    smtp_server = smtplib.SMTP_SSL('smtp.gmail.com', 465)\n",
+    "    smtp_server.login(sender, password)\n",
+    "    smtp_server.sendmail(sender, recipients, msg.as_string())\n",
+    "    smtp_server.quit()\n",
+    "\n",
+    "subject = \"Test\"\n",
+    "body = \"This is the body of the text message\"\n",
+    "sender = \"park.family.bucheon@gmail.com\"\n",
+    "recipients = [\"8593335321@msg.fi.google.com\"]\n",
+    "password = \"fizwmiuiwonvuulj\"\n",
+    "\n",
+    "send_email(subject, body, sender, recipients, password)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 382,
    "id": "7fa43345",
    "metadata": {
@@ -389,15 +463,19 @@
     "\n",
     "\n",
     "for i in range(4):\n",
-    "    train_loop(articles_original['train'], model, optimizer, 8, device)\n",
-    "    test_loop(articles_original['validation'], model, 8, device)\n",
+    "    train_loop(articles_encoded['train'], model, optimizer, 16, device)\n",
+    "    metrics = test_loop(articles_encoded['validation'].shuffle().select(range(640)), model, 16, device)\n",
     "    lr_scheduler.step()\n",
-    "    dir_path = os.path.join(os.getcwd(), f'checkpoint_epoch_{i}')\n",
-    "    os.mkdir(dir_path)\n",
+    "    subdir_path = os.path.join(dir_path, f'checkpoint_epoch_{i}')\n",
+    "    os.mkdir(subdir_path)\n",
     "    file_name = 'model.pth'\n",
-    "    torch.save(model.state_dict(), os.path.join(dir_path, file_name))\n",
-    "    \n",
-    "    "
+    "    torch.save(model.state_dict(), os.path.join(subdir_path, file_name))\n",
+    "    with open(os.path.join(subdir_path, 'metrics.txt'), 'w') as f:\n",
+    "        f.write(f\"summary of ecpoh {i}\\n\")\n",
+    "        for k,v in metrics.items():\n",
+    "            f.write(f\"{k} : {v}\\n\")\n",
+    "            f.write('end')\n",
+    "        f.close()"
    ]
   },
   {
