--- a/Data Preprocessing.ipynb
+++ b/Data Preprocessing.ipynb
@@ -1298,94 +1298,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 50,
-   "id": "502f9a73",
+   "cell_type": "markdown",
+   "id": "92c17943",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "df['shares_class'] = df.shares.apply(lambda x: x>1400)"
+    "#### csv file for the cleaned data will be generated at the end of 'Data Preprocessing for NN.ipynb'"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 53,
-   "id": "c7fd20a7",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Index(['url', 'timedelta', 'n_tokens_title', 'n_tokens_content',\n",
-       "       'n_unique_tokens', 'n_non_stop_unique_tokens', 'num_hrefs',\n",
-       "       'num_self_hrefs', 'num_imgs', 'num_videos', 'average_token_length',\n",
-       "       'num_keywords', 'kw_min_min', 'kw_max_min', 'kw_avg_min', 'kw_min_max',\n",
-       "       'kw_max_max', 'kw_avg_max', 'kw_min_avg', 'kw_max_avg', 'kw_avg_avg',\n",
-       "       'self_reference_min_shares', 'self_reference_max_shares',\n",
-       "       'self_reference_avg_sharess', 'LDA_00', 'LDA_01', 'LDA_02', 'LDA_03',\n",
-       "       'LDA_04', 'global_subjectivity', 'global_sentiment_polarity',\n",
-       "       'global_rate_positive_words', 'global_rate_negative_words',\n",
-       "       'rate_positive_words', 'rate_negative_words', 'avg_positive_polarity',\n",
-       "       'min_positive_polarity', 'max_positive_polarity',\n",
-       "       'avg_negative_polarity', 'min_negative_polarity',\n",
-       "       'max_negative_polarity', 'title_subjectivity',\n",
-       "       'title_sentiment_polarity', 'abs_title_subjectivity',\n",
-       "       'abs_title_sentiment_polarity', 'shares', 'channel', 'weekday', 'LDA',\n",
-       "       'shares_class'],\n",
-       "      dtype='object')"
-      ]
-     },
-     "execution_count": 53,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df.columns"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 36,
-   "id": "63494061",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# df = df[['n_tokens_title', 'n_tokens_content',\n",
-    "#        'n_unique_tokens', 'n_non_stop_unique_tokens', 'num_hrefs',\n",
-    "#        'num_imgs', 'num_videos', 'average_token_length',\n",
-    "#        'num_keywords', 'kw_min_min', 'kw_max_min', 'kw_avg_min', 'kw_min_max',\n",
-    "#        'kw_max_max', 'kw_avg_max', 'kw_min_avg', 'kw_max_avg', 'kw_avg_avg',\n",
-    "#        'num_self_hrefs', 'self_reference_min_shares', 'self_reference_max_shares',\n",
-    "#        'self_reference_avg_sharess', 'LDA', 'LDA_00', 'LDA_01', 'LDA_02', 'LDA_03',\n",
-    "#        'LDA_04',  'global_subjectivity', 'title_subjectivity', 'abs_title_subjectivity',\n",
-    "#        'global_sentiment_polarity',\n",
-    "#        'global_rate_positive_words', 'global_rate_negative_words',\n",
-    "#        'rate_positive_words', 'rate_negative_words', 'avg_positive_polarity',\n",
-    "#        'min_positive_polarity', 'max_positive_polarity',\n",
-    "#        'avg_negative_polarity', 'min_negative_polarity',\n",
-    "#        'max_negative_polarity', 'title_sentiment_polarity', 'abs_title_sentiment_polarity',\n",
-    "#        'channel','weekday', 'shares']]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 54,
-   "id": "de9cebd0",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df.drop(['url','timedelta','LDA','shares'], axis = 1).to_csv('text_summary_stats.csv', \n",
-    "                                                             index = False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "87735143",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
