--- a/Pretraining BERT with custom positional embedding.ipynb
+++ b/Pretraining BERT with custom positional embedding.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "1968292f",
+   "id": "202b4b5b",
    "metadata": {},
    "source": [
     "## Data Tokenization and Preprocessing"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "4b7307d5",
+   "id": "e027a40d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "81aba482",
+   "id": "df2f8b25",
    "metadata": {},
    "outputs": [
     {
@@ -36,7 +36,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6a3633bf4f43432f967a5a20a26343bf",
+       "model_id": "7153f1fca2e04dc4bf76a607cc13809b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -55,7 +55,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "8a9bfdcf",
+   "id": "b9f96a89",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,7 +67,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "e461bb72",
+   "id": "d4a058de",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,7 +80,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "3d2a1655",
+   "id": "bcad2722",
    "metadata": {},
    "outputs": [
     {
@@ -99,7 +99,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "fc1d8c03",
+   "id": "6f187cd0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,7 +111,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "84da3e38",
+   "id": "8ab78c39",
    "metadata": {},
    "outputs": [
     {
@@ -130,7 +130,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "ed70efde",
+   "id": "6515f4c1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e10e74cd",
+   "id": "54e4c49d",
    "metadata": {},
    "source": [
     "# Tesing if \"MashableBertForMaskedLM\" works"
@@ -148,7 +148,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "4ace136e",
+   "id": "e50dba25",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -161,7 +161,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "4eeb5aaf",
+   "id": "0a756d52",
    "metadata": {},
    "outputs": [
     {
@@ -204,7 +204,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f6ce485b",
+   "id": "36ac0b5b",
    "metadata": {},
    "source": [
     "# Organizing Training Job for MaskedLM"
@@ -213,7 +213,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "1aac3430",
+   "id": "de08d174",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -224,8 +224,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "30b5bfe2",
+   "execution_count": 10,
+   "id": "8c635f94",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -237,8 +237,43 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 11,
+   "id": "be72e94f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pynvml import *\n",
+    "\n",
+    "\n",
+    "def print_gpu_utilization():\n",
+    "    nvmlInit()\n",
+    "    handle = nvmlDeviceGetHandleByIndex(0)\n",
+    "    info = nvmlDeviceGetMemoryInfo(handle)\n",
+    "    print(f\"GPU memory occupied: {info.used//1024**2} MB.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 12,
-   "id": "98b24b3d",
+   "id": "896abdfd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "GPU memory occupied: 880 MB.\n"
+     ]
+    }
+   ],
+   "source": [
+    "print_gpu_utilization()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "7f744a2a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -247,13 +282,18 @@
     "\n",
     "training_args = TrainingArguments(\n",
     "    output_dir=\"pretraining-mashablebert\",\n",
+    "    overwrite_output_dir = True,\n",
     "    evaluation_strategy=\"epoch\",\n",
     "    per_device_train_batch_size = 8,\n",
-    "    per_device_eval_batch_size = 8,\n",
+    "    per_device_eval_batch_size = 4,\n",
+    "    fp16 = True,\n",
     "    learning_rate=2e-5,\n",
     "    num_train_epochs=10,\n",
     "    weight_decay=0.01,\n",
     "    push_to_hub=False,\n",
+    "    gradient_accumulation_steps=4,\n",
+    "    gradient_checkpointing=True,\n",
+    "    optim = 'adafactor'\n",
     ")\n",
     "\n",
     "\n",
@@ -269,16 +309,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "1000002c",
+   "execution_count": 14,
+   "id": "2676c9a7",
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "GPU memory occupied: 1908 MB.\n"
+     ]
+    }
+   ],
+   "source": [
+    "print_gpu_utilization()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "6f0343f7",
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/leeparkuky/.local/lib/python3.10/site-packages/transformers/optimization.py:391: FutureWarning: This implementation of AdamW is deprecated and will be removed in a future version. Use the PyTorch implementation torch.optim.AdamW instead, or set `no_deprecation_warning=True` to disable this warning\n",
-      "  warnings.warn(\n",
       "You're using a BertTokenizerFast tokenizer. Please note that with a fast tokenizer, using the `__call__` method is faster than using a method to encode the text followed by a call to the `pad` method to get a padded encoding.\n"
      ]
     },
@@ -288,8 +346,8 @@
        "\n",
        "    <div>\n",
        "      \n",
-       "      <progress value='469' max='49510' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
-       "      [  469/49510 04:27 < 7:48:17, 1.75 it/s, Epoch 0.09/10]\n",
+       "      <progress value='12370' max='12370' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
+       "      [12370/12370 59:12, Epoch 9/10]\n",
        "    </div>\n",
        "    <table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
@@ -300,6 +358,16 @@
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>8</td>\n",
+       "      <td>6.407500</td>\n",
+       "      <td>6.452059</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>9</td>\n",
+       "      <td>6.398100</td>\n",
+       "      <td>6.355864</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table><p>"
       ],
@@ -309,27 +377,256 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "TrainOutput(global_step=12370, training_loss=1.2272211270652285, metrics={'train_runtime': 3554.9628, 'train_samples_per_second': 111.416, 'train_steps_per_second': 3.48, 'total_flos': 1.3346207328043008e+17, 'train_loss': 1.2272211270652285, 'epoch': 10.0})"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "trainer.train()"
+    "trainer.train(resume_from_checkpoint = True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "27012a9a",
+   "execution_count": 21,
+   "id": "d35a5a04",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "trainer.eval_dataset = articles_tokenized['train'].train_test_split(.2)['test']"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "6ea2ce37",
+   "execution_count": 22,
+   "id": "458f241a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "    <div>\n",
+       "      \n",
+       "      <progress value='3962' max='1981' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
+       "      [1981/1981 13:19]\n",
+       "    </div>\n",
+       "    "
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'eval_loss': 6.367098331451416,\n",
+       " 'eval_runtime': 95.5804,\n",
+       " 'eval_samples_per_second': 82.883,\n",
+       " 'eval_steps_per_second': 20.726,\n",
+       " 'epoch': 10.0}"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "trainer.evaluate()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "b34b32e5",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "trainer.args.num_train_epochs = 13"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "cec1fba7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "    <div>\n",
+       "      \n",
+       "      <progress value='16081' max='16081' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
+       "      [16081/16081 1:47:36, Epoch 12/13]\n",
+       "    </div>\n",
+       "    <table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       " <tr style=\"text-align: left;\">\n",
+       "      <th>Epoch</th>\n",
+       "      <th>Training Loss</th>\n",
+       "      <th>Validation Loss</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>9</td>\n",
+       "      <td>6.398100</td>\n",
+       "      <td>6.366686</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>10</td>\n",
+       "      <td>6.399100</td>\n",
+       "      <td>6.372880</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>11</td>\n",
+       "      <td>6.398200</td>\n",
+       "      <td>6.375506</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>12</td>\n",
+       "      <td>6.391100</td>\n",
+       "      <td>6.371051</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table><p>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "TrainOutput(global_step=16081, training_loss=1.6235503040211954, metrics={'train_runtime': 6458.4946, 'train_samples_per_second': 79.725, 'train_steps_per_second': 2.49, 'total_flos': 1.735006952645591e+17, 'train_loss': 1.6235503040211954, 'epoch': 13.0})"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "trainer.train(resume_from_checkpoint = True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "3c7873d9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<transformers.trainer.Trainer at 0x7f159fce64d0>"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "trainer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "223d20a1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "trainer.save_model('MashableBertForMaskedLM_Pretrained')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "796885c6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from Transformer_Models import MashableBertModel\n",
+    "\n",
+    "bertmodel = MashableBertModel('MashableBertForMaskedLM_Pretrained')\n",
+    "# bertmodel.load_state_dict(torch.load('sample_weight.pth'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "id": "7720c94f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "weights = torch.load('MashableBertForMaskedLM_Pretrained/pytorch_model.bin')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "id": "6c66e8ca",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# rename keys, drop unused keys for basemodel, then save the weights\n",
+    "for key in [key for key in weights.keys() if key[5:] not in bertmodel.state_dict().keys()]:\n",
+    "    del weights[key]\n",
+    "for key in [key for key in weights.keys() if key[5:] in bertmodel.state_dict().keys()]:\n",
+    "    weights[key[5:]] = weights[key]\n",
+    "    del weights[key]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "id": "4923a301",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<All keys matched successfully>"
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bertmodel.load_state_dict(weights)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "id": "4c42bd29",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Finally save the basemodel weight in Model Weights folder\n",
+    "torch.save(bertmodel.state_dict(), 'Model Weights/MashableBertModel_Pretrained.pth')"
+   ]
   }
  ],
  "metadata": {
