--- a/Pretraining BERT with custom positional embedding.ipynb
+++ b/Pretraining BERT with custom positional embedding.ipynb
@@ -36,7 +36,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7153f1fca2e04dc4bf76a607cc13809b",
+       "model_id": "17bcf028473146bb990347ff54357d6c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -105,7 +105,13 @@
    "source": [
     "def tokenize(examples):\n",
     "    text = [title + content for title, content in zip(examples['title'], examples['content'])]\n",
-    "    return tokenizer(text, max_length = 512, truncation = True, padding = True)"
+    "    inputs = tokenizer(text, max_length = 1500, truncation = True, padding = False)\n",
+    "    N = len(inputs['input_ids'])\n",
+    "    fernandes_list = []\n",
+    "    for i, input_ids in enumerate(inputs['input_ids']):\n",
+    "        fernandes_list.append([examples['fernandes'][i] for _ in range(len(input_ids))])\n",
+    "    inputs.update({'fernandes':fernandes_list})\n",
+    "    return inputs"
    ]
   },
   {
@@ -118,7 +124,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Loading cached processed dataset at /home/leeparkuky/.cache/huggingface/datasets/online_news_popularity_data/online_news_popularity_data/1.0.0/63eb244b62e86df6ad3ae3034fcbddd6ed2840885e607a97d5e8f49afab926e0/cache-5d17139988fb0a89_*_of_00016.arrow\n"
+      "Loading cached processed dataset at /home/leeparkuky/.cache/huggingface/datasets/online_news_popularity_data/online_news_popularity_data/1.0.0/63eb244b62e86df6ad3ae3034fcbddd6ed2840885e607a97d5e8f49afab926e0/cache-fc1b51a92fbd27c3_*_of_00016.arrow\n"
      ]
     }
    ],
@@ -130,11 +136,122 @@
   {
    "cell_type": "code",
    "execution_count": 8,
+   "id": "544e2da6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "DatasetDict({\n",
+       "    train: Dataset({\n",
+       "        features: ['fernandes', 'input_ids', 'token_type_ids', 'attention_mask'],\n",
+       "        num_rows: 39608\n",
+       "    })\n",
+       "})"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "articles_tokenized"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "4922ddb6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from collections import defaultdict\n",
+    "\n",
+    "def split_inputs_by_512(examples):\n",
+    "    result = defaultdict(list)\n",
+    "    for key, vec in examples.items():\n",
+    "        vec = [np.array(v) for v in vec]\n",
+    "        vec = np.concatenate(vec)\n",
+    "        size = 512\n",
+    "        remaining = 512\n",
+    "        idx = 0\n",
+    "        while remaining >= 512:\n",
+    "            result[key].append(vec[idx*size:(idx+1)*size].tolist())\n",
+    "            remaining = vec[(idx+1)*size:].shape[0]\n",
+    "            idx += 1\n",
+    "    return result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "060005ae",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Map (num_proc=16):   0%|          | 0/39608 [00:00<?, ? examples/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "articles_tokenized = articles_tokenized.shuffle().map(split_inputs_by_512, batched = True, batch_size = 128, num_proc = 16)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "c0fceaf0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "DatasetDict({\n",
+       "    train: Dataset({\n",
+       "        features: ['fernandes', 'input_ids', 'token_type_ids', 'attention_mask'],\n",
+       "        num_rows: 41672\n",
+       "    })\n",
+       "})"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "articles_tokenized"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "id": "6515f4c1",
    "metadata": {},
    "outputs": [],
    "source": [
     "articles_tokenized.set_format('pt')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "a93335c4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "articles_tokenized = articles_tokenized['train'].train_test_split(.05)"
    ]
   },
   {
@@ -147,59 +264,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "e50dba25",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from Transformer_Models import MashableBertForMaskedLM\n",
+    "# from Transformer_Models import MashableBertForMaskedLM\n",
     "\n",
-    "model_ckpt = 'bert-base-uncased'\n",
-    "model = MashableBertForMaskedLM(model_ckpt)"
+    "# model_ckpt = 'bert-base-uncased'\n",
+    "# model = MashableBertForMaskedLM(model_ckpt)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "0a756d52",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "MaskedLMOutput(loss=None, logits=tensor([[[ 0.0000, -0.1032,  0.2310,  ..., -0.2509,  0.3616, -0.3281],\n",
-       "         [ 0.0000, -0.1271,  0.6196,  ...,  0.4624, -0.5777, -0.2988],\n",
-       "         [ 0.0000, -0.1600,  0.7666,  ..., -0.0365,  0.0541,  0.2170],\n",
-       "         ...,\n",
-       "         [ 0.0000,  0.0435,  0.6025,  ..., -0.1321,  0.3602, -0.1723],\n",
-       "         [ 0.0000, -1.0553,  1.2979,  ...,  0.0959, -0.4221, -0.0721],\n",
-       "         [ 0.0000, -0.9967,  0.8056,  ...,  0.5052, -0.7550,  0.2571]],\n",
-       "\n",
-       "        [[ 0.0000, -0.4462,  0.0446,  ..., -0.1923, -0.0159,  0.3493],\n",
-       "         [ 0.0000, -0.4520,  0.7410,  ...,  0.0731,  0.1499,  0.2078],\n",
-       "         [ 0.0000,  0.6072,  0.7652,  ..., -0.3357, -0.5743, -0.6377],\n",
-       "         ...,\n",
-       "         [ 0.0000,  0.3018,  0.8404,  ...,  0.4595, -0.0907,  0.0118],\n",
-       "         [ 0.0000, -0.5260,  0.8660,  ...,  0.5451, -0.1357,  0.0369],\n",
-       "         [ 0.0000, -0.4300,  0.7983,  ...,  0.5482, -0.3280,  0.1211]],\n",
-       "\n",
-       "        [[ 0.0000, -0.2728,  0.1408,  ..., -0.1378,  0.0690, -0.1533],\n",
-       "         [ 0.0000,  0.0375,  0.6777,  ..., -0.2071, -0.8297, -0.4305],\n",
-       "         [ 0.0000, -0.6343,  1.2457,  ...,  0.0773, -0.6226, -0.1380],\n",
-       "         ...,\n",
-       "         [ 0.0000,  0.1064,  0.9170,  ...,  0.1964, -0.2884, -0.3993],\n",
-       "         [ 0.0000, -0.0839,  0.6026,  ...,  0.0822, -0.2813,  0.2141],\n",
-       "         [ 0.0000, -0.1980,  1.1292,  ...,  0.2331, -0.1993, -0.1333]]],\n",
-       "       grad_fn=<ViewBackward0>), hidden_states=None, attentions=None)"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "model(**{k:v for k,v in articles_tokenized['train'][:3].items()})"
+    "# model(**{k:v for k,v in articles_tokenized['train'][:3].items()})"
    ]
   },
   {
@@ -212,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 14,
    "id": "de08d174",
    "metadata": {},
    "outputs": [],
@@ -224,10 +307,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 15,
    "id": "8c635f94",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Some weights of the model checkpoint at bert-base-uncased were not used when initializing BertModel: ['cls.predictions.transform.LayerNorm.bias', 'cls.predictions.transform.LayerNorm.weight', 'cls.seq_relationship.weight', 'cls.predictions.decoder.weight', 'cls.predictions.bias', 'cls.predictions.transform.dense.weight', 'cls.seq_relationship.bias', 'cls.predictions.transform.dense.bias']\n",
+      "- This IS expected if you are initializing BertModel from the checkpoint of a model trained on another task or with another architecture (e.g. initializing a BertForSequenceClassification model from a BertForPreTraining model).\n",
+      "- This IS NOT expected if you are initializing BertModel from the checkpoint of a model that you expect to be exactly identical (initializing a BertForSequenceClassification model from a BertForSequenceClassification model).\n"
+     ]
+    }
+   ],
    "source": [
     "from Transformer_Models import MashableBertForMaskedLM\n",
     "\n",
@@ -237,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 16,
    "id": "be72e94f",
    "metadata": {},
    "outputs": [],
@@ -254,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 17,
    "id": "896abdfd",
    "metadata": {},
    "outputs": [
@@ -262,7 +355,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "GPU memory occupied: 880 MB.\n"
+      "GPU memory occupied: 997 MB.\n"
      ]
     }
    ],
@@ -272,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 18,
    "id": "7f744a2a",
    "metadata": {},
    "outputs": [],
@@ -288,12 +381,13 @@
     "    per_device_eval_batch_size = 4,\n",
     "    fp16 = True,\n",
     "    learning_rate=2e-5,\n",
-    "    num_train_epochs=10,\n",
+    "    num_train_epochs=30,\n",
     "    weight_decay=0.01,\n",
     "    push_to_hub=False,\n",
     "    gradient_accumulation_steps=4,\n",
     "    gradient_checkpointing=True,\n",
-    "    optim = 'adafactor'\n",
+    "    optim = 'adafactor',\n",
+    "    save_total_limit = 10\n",
     ")\n",
     "\n",
     "\n",
@@ -309,7 +403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 19,
    "id": "2676c9a7",
    "metadata": {},
    "outputs": [
@@ -317,7 +411,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "GPU memory occupied: 1908 MB.\n"
+      "GPU memory occupied: 2030 MB.\n"
      ]
     }
    ],
@@ -327,27 +421,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 20,
    "id": "6f0343f7",
-   "metadata": {
-    "scrolled": true
-   },
+   "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "You're using a BertTokenizerFast tokenizer. Please note that with a fast tokenizer, using the `__call__` method is faster than using a method to encode the text followed by a call to the `pad` method to get a padded encoding.\n"
-     ]
-    },
     {
      "data": {
       "text/html": [
        "\n",
        "    <div>\n",
        "      \n",
-       "      <progress value='12370' max='12370' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
-       "      [12370/12370 59:12, Epoch 9/10]\n",
+       "      <progress value='60500' max='37110' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
+       "      [60500/37110 : < :, Epoch 46/30]\n",
        "    </div>\n",
        "    <table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
@@ -358,16 +443,6 @@
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
-       "    <tr>\n",
-       "      <td>8</td>\n",
-       "      <td>6.407500</td>\n",
-       "      <td>6.452059</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>9</td>\n",
-       "      <td>6.398100</td>\n",
-       "      <td>6.355864</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table><p>"
       ],
@@ -381,10 +456,10 @@
     {
      "data": {
       "text/plain": [
-       "TrainOutput(global_step=12370, training_loss=1.2272211270652285, metrics={'train_runtime': 3554.9628, 'train_samples_per_second': 111.416, 'train_steps_per_second': 3.48, 'total_flos': 1.3346207328043008e+17, 'train_loss': 1.2272211270652285, 'epoch': 10.0})"
+       "TrainOutput(global_step=60500, training_loss=0.0, metrics={'train_runtime': 0.1021, 'train_samples_per_second': 11633957.467, 'train_steps_per_second': 363524.436, 'total_flos': 6.526637265340846e+17, 'train_loss': 0.0, 'epoch': 46.93})"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -395,156 +470,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "id": "d35a5a04",
+   "execution_count": null,
+   "id": "ba9af71e",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "trainer.eval_dataset = articles_tokenized['train'].train_test_split(.2)['test']"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "id": "458f241a",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "\n",
-       "    <div>\n",
-       "      \n",
-       "      <progress value='3962' max='1981' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
-       "      [1981/1981 13:19]\n",
-       "    </div>\n",
-       "    "
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "{'eval_loss': 6.367098331451416,\n",
-       " 'eval_runtime': 95.5804,\n",
-       " 'eval_samples_per_second': 82.883,\n",
-       " 'eval_steps_per_second': 20.726,\n",
-       " 'epoch': 10.0}"
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "trainer.evaluate()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
-   "id": "b34b32e5",
+   "execution_count": null,
+   "id": "9e001ebe",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "trainer.args.num_train_epochs = 13"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
-   "id": "cec1fba7",
+   "execution_count": null,
+   "id": "6e867f85",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "\n",
-       "    <div>\n",
-       "      \n",
-       "      <progress value='16081' max='16081' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
-       "      [16081/16081 1:47:36, Epoch 12/13]\n",
-       "    </div>\n",
-       "    <table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       " <tr style=\"text-align: left;\">\n",
-       "      <th>Epoch</th>\n",
-       "      <th>Training Loss</th>\n",
-       "      <th>Validation Loss</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <td>9</td>\n",
-       "      <td>6.398100</td>\n",
-       "      <td>6.366686</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>10</td>\n",
-       "      <td>6.399100</td>\n",
-       "      <td>6.372880</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>11</td>\n",
-       "      <td>6.398200</td>\n",
-       "      <td>6.375506</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>12</td>\n",
-       "      <td>6.391100</td>\n",
-       "      <td>6.371051</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table><p>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "TrainOutput(global_step=16081, training_loss=1.6235503040211954, metrics={'train_runtime': 6458.4946, 'train_samples_per_second': 79.725, 'train_steps_per_second': 2.49, 'total_flos': 1.735006952645591e+17, 'train_loss': 1.6235503040211954, 'epoch': 13.0})"
-      ]
-     },
-     "execution_count": 27,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "trainer.train(resume_from_checkpoint = True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 31,
-   "id": "3c7873d9",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<transformers.trainer.Trainer at 0x7f159fce64d0>"
-      ]
-     },
-     "execution_count": 31,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "trainer"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
